--- a/inst/markdown/snowcrab_presentation_assessment.rmd
+++ b/inst/markdown/snowcrab_presentation_assessment.rmd
@@ -1,7 +1,8 @@
 ---
 title: "Snow Crab, Scotian Shelf, Canada (NAFO Div. 4VWX) in 2023"
 subtitle: "Ecosystem and Population Assessment"
-author: "Jae S. Choi"
+author: "Snow Crab Group"
+# author: "Jae S. Choi"
 # footnote: "jae.choi@dfo-mpo.gc.ca"
 institute: "Bedford Institute of Oceanography, DFO Science"
 # date: "`r format(Sys.time(), '%d %B, %Y')`"
@@ -39,7 +40,7 @@ params:
 
 This is a RMarkdown document designed to render a PDF document. Run:
 
-  make snowcrab_presentation_assessment YR=2023 SOURCE~/bio/bio.snowcrab/inst/markdown WK=~/bio/bio.data/bio.snowcrab/reports 
+  make snowcrab_presentation_assessment YR=2023 SOURCE="~/bio/bio.snowcrab/inst/markdown" WK="~/bio/bio.data/bio.snowcrab/reports" 
 
 Alter directories to reflect setup or copy Makefile and alter defaults to your needs.
 
@@ -139,17 +140,41 @@ Alter directories to reflect setup or copy Makefile and alter defaults to your n
  
 # Ecosystem considerations
 
-## Connectivity/Movement {.c}
+
+## Connectivity: Oceanic currents {.c}
+
+```{r ocean_currents, echo=FALSE, out.width='55%', fig.align='center', fig.show='hold',  fig.cap = 'Ocean currents in the Martimes. Source: https://www.dfo-mpo.gc.ca/oceans/publications/soto-rceo/2018/atlantic-ecosystems-ecosystemes-atlantiques/index-eng.html' }
+fn2=file.path( media_loc, "maritimes_currents.png" )
+knitr::include_graphics( c(fn2) ) 
+# \@ref(fig:movementtracks)  
+``` 
+
+
+## Connectivity: Movement {.c}
 
 ::: columns 
 :::: column 
-Figures
+ 
+```{r movementtracks, echo=FALSE, out.width='71%', fig.align='center', fig.show='hold',  fig.cap = 'Snow Crab movement tracks from mark and recapture.' }
+fn1=file.path( media_loc, "movement0.png" )
+fn2=file.path( media_loc, "movement.png" )
+knitr::include_graphics( c(fn1, fn2) ) 
+# \@ref(fig:movementtracks)  
+``` 
+ 
+ 
 ::::
- :::: column
-Figures
+:::: column
+
+```{r movement, echo=FALSE, out.width='55%', fig.align='center', fig.show='hold',  fig.cap = 'Snow Crab movement distances and rates.' }
+fn1=file.path( media_loc, "snowcrab_movement_distances.png" )
+fn2=file.path( media_loc, "snowcrab_movement_rates.png" )
+knitr::include_graphics( c(fn1, fn2) ) 
+# \@ref(fig:movement)  
+``` 
+ 
 ::::
 :::
- 
 
 
 ## Bathymetry {.c}
@@ -197,14 +222,14 @@ knitr::include_graphics( file.path( substrdir, 'substrate.s.sdSpatial.canada.eas
 
 :::: column 
 \vspace{12mm}
-```{r bottom-temperatures-survey, out.width='80%', echo=FALSE, fig.align='center', fig.cap = 'Annual variations in bottom temperature observed during the Snow Crab survey. The horizontal (black) line indicates the long-term, median temperature within each subarea. Error bars represent standard errors.' }
+```{r bottom-temperatures-survey, out.width='90%', echo=FALSE, fig.align='center', fig.cap = 'Annual variations in bottom temperature observed during the Snow Crab survey. The horizontal (black) line indicates the long-term, median temperature within each subarea. Error bars represent standard errors.' }
 knitr::include_graphics( file.path( SCD, 'assessments', year.assessment, 'timeseries', 'survey', 't.pdf') )
 # \@ref(fig:bottom-temperatures-survey)
 ```
 ::::
  
 :::: column 
-```{r bottom-temperatures, out.width='70%', echo=FALSE, fig.align='center', fig.cap = 'Posterior densities of predicted average bottom temperatures. Red horizontal line is at $7^\\circ$C.' }
+```{r bottom-temperatures, out.width='75%', echo=FALSE, fig.align='center', fig.cap = 'Posterior densities of predicted average bottom temperatures. Red horizontal line is at $7^\\circ$C.' }
 knitr::include_graphics( file.path( SCD, 'assessments', year.assessment, 'timeseries', 'temperature_bottom.pdf') )
 # \@ref(fig:bottom-temperatures)
 ```
@@ -378,11 +403,11 @@ text( PC2 ~ PC1, labels=vern, data=pcadata[j,], cex=0.75, col="darkgreen"  )
 
     
     
-## Bycatch NENS {.c}
+## Bycatch N-ENS {.c}
 
 \tiny
  
-```{r bycatch-cpue-nens, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch (kg) in NENS for those greater than 10 kg/year.' }
+```{r bycatch-cpue-n-ens, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch (kg) in N-ENS for those greater than 10 kg/year.' }
 o = o_cfanorth    
 o$bycatch_table = o$bycatch_table[ which(o$bycatch_table$"Average/Moyen" > 10 ),]
 o$bycatch_table$"Average/Moyen" = round(o$bycatch_table$"Average/Moyen")
@@ -393,8 +418,8 @@ gt(o$bycatch_table)
 \normalsize
 
 
-## Bycatch NENS ... {.c}
-```{r bycatch-speciesordination_nens, out.width='70%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch as potentially interacting species in NENS.' }
+## Bycatch N-ENS ... {.c}
+```{r bycatch-speciesordination_n-ens, out.width='70%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch as potentially interacting species in N-ENS.' }
 o = o_cfanorth    
 lookup = bio.taxonomy::taxonomy.recode( from="spec", to="taxa", tolookup=o$specid )$vern
 xlab = paste("PC1 (", pca$variance_percent[1], "%)", sep="" )
@@ -411,11 +436,11 @@ text( PC2 ~ PC1, labels=vern, data=pcadata[j,], cex=0.75, col="darkgreen"  )
 ```
 
     
-## Bycatch SENS {.c}
+## Bycatch S-ENS {.c}
 
 \tiny
  
-```{r bycatch-cpue-sens, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch (kg) in SENS for those greater than 10 kg/year' }
+```{r bycatch-cpue-s-ens, out.width='12%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch (kg) in S-ENS for those greater than 10 kg/year' }
 o = o_cfasouth    
 o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
 o$bycatch_table = o$bycatch_table[ which(o$bycatch_table$"Average/Moyen" > 10 ),]
@@ -428,8 +453,8 @@ gt(o$bycatch_table)
 
 
 
-## Bycatch SENS ... {.c}
-```{r bycatch-speciesordination_sens, out.width='70%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch as potentially interacting species in SENS.' }
+## Bycatch S-ENS ... {.c}
+```{r bycatch-speciesordination_s-ens, out.width='70%', echo=FALSE, fig.align='center', fig.cap = 'Bycatch as potentially interacting species in S-ENS.' }
 o = o_cfasouth
 lookup = bio.taxonomy::taxonomy.recode( from="spec", to="taxa", tolookup=o$specid )$vern
 xlab = paste("PC1 (", pca$variance_percent[1], "%)", sep="" )
@@ -749,7 +774,7 @@ include_graphics( c(  fn3, fn2, fn1) )
 
 \begin{tiny}
 
-```{r fbGMTS, out.width='50%', echo=FALSE, fig.align='center', fig.cap = 'The crude, unadjusted geometric mean fishable biomass density log~10(t/km$^2$) from the Snow Crab survey. Error bars represent 95\\% Confidence Intervals. Note the absence of data in 2020. Prior to 2004, surveys were conducted in the Spring. A peak in 2009 to 2014 and has since been declining in all areas. '}
+```{r fbGMTS, out.width='65%', echo=FALSE, fig.align='center', fig.cap = 'The crude, unadjusted geometric mean fishable biomass density log~10(t/km$^2$) from the Snow Crab survey. Error bars represent 95\\% Confidence Intervals. Note the absence of data in 2020. Prior to 2004, surveys were conducted in the Spring. A peak in 2009 to 2014 and has since been declining in all areas. '}
 fn = file.path(SCD,'assessments', year.assessment, 'timeseries','survey','R0.mass.pdf')
 include_graphics( c(fn) )
 #\@ref(fig:fbGMTS)
@@ -805,7 +830,7 @@ include_graphics( c(  fn3, fn2, fn1) )
 
 ## Viable Habitat ... {.c}
 
-```{r fb-habitat-timeseries, out.width='50%', echo=FALSE,   fig.align='center', fig.cap = 'Habitat viability (probability; fishable Snow Crab). Means and 95\\% Credible Intervals are presented.' }
+```{r fb-habitat-timeseries, out.width='70%', echo=FALSE,   fig.align='center', fig.cap = 'Habitat viability (probability; fishable Snow Crab). Means and 95\\% Credible Intervals are presented.' }
 loc = file.path( SCD, 'modelled', '1999_present_fb', 'aggregated_habitat_timeseries' )
 include_graphics( file.path( loc, 'habitat_M0.png') )
 # \@ref(fig:fb-habitat-timeseries)
@@ -838,7 +863,7 @@ include_graphics( c( fn3, fn2, fn1) )
 ## Biomass Index (aggregate) ... {.c}
     
 \begin{tiny}
-```{r fbindex-timeseries, out.width='60%', echo=FALSE, fig.align='center', fig.cap = 'The fishable biomass index (t) predicted by CARSTM of Snow Crab survey densities. Error bars represent Bayesian 95\\% Credible Intervals. Note large errors in 2020 when there was no survey.' }
+```{r fbindex-timeseries, out.width='65%', echo=FALSE, fig.align='center', fig.cap = 'The fishable biomass index (t) predicted by CARSTM of Snow Crab survey densities. Error bars represent Bayesian 95\\% Credible Intervals. Note large errors in 2020 when there was no survey.' }
 include_graphics( file.path( SCD, 'modelled', '1999_present_fb', 'aggregated_biomass_timeseries' , 'biomass_M0.png') )
 # \@ref(fig:fbindex-timeseries)
 ```
@@ -891,9 +916,9 @@ include_graphics(c(fn1, fn2, fn3) )
 
 
  
-## Fishery Model Summary ...  {.c}
+## Fishery Model Summary  {.c}
 
-|   | NENS | SENS | 4X |  
+|   | N-ENS | S-ENS | 4X |  
 |----- | ----- | ----- | ----- |
 | |  |  |  |
 |q       | `r round(q_north, 3)` (`r round(q_north_sd, 3)`) | `r round(q_south, 3)` (`r round(q_south_sd, 3)`) | `r round(q_4x, 3)` (`r round(q_4x_sd, 3)`) |
@@ -903,7 +928,9 @@ include_graphics(c(fn1, fn2, fn3) )
 |Fishing Mortality    | `r round(FM_north[t0], 3)` (`r round(FM_north_sd[t0], 3)`) | `r round(FM_south[t0], 3)` (`r round(FM_south_sd[t0], 3)`) | `r round(FM_4x[t0], 3)` (`r round(FM_4x_sd[t0], 3)`) |
 
 
-
+\tiny
+Note: Values in parentheses are Posterior standard deviations.
+\normalsize
 
 <!--
 ##  Fishery Footprint   {.c}
@@ -930,7 +957,7 @@ include_graphics( file.path( params$media_loc, 'harvest_control_rules.png') )
 
 ## Reference Points ... {.c}
 
-```{r logistic-hcr, out.width='25%', echo=FALSE, fig.show='hold', fig.align='center', fig.cap = 'Reference Points (fishing mortality and modelled biomass) from Model 1, for N-ENS (left), S-ENS (middle), and 4X (right). The large yellow dot indicates most recent year and the 95\\% CI.' }
+```{r logistic-hcr, out.width='29%', echo=FALSE, fig.show='hold', fig.align='center', fig.cap = 'Reference Points (fishing mortality and modelled biomass) from the Fishery Model, for N-ENS (left), S-ENS (middle), and 4X (right). The large yellow dot indicates most recent year and the 95\\% CI. Not: the model does not account for illegal and unreported landings, and interspecific interactions.' }
   odir = file.path( fishery_model_results, year.assessment, "logistic_discrete_historical" )
   fn1 = file.path( odir, 'plot_hcr_cfanorth.pdf' ) 
   fn2 = file.path( odir, 'plot_hcr_cfasouth.pdf' ) 
@@ -938,57 +965,65 @@ include_graphics( file.path( params$media_loc, 'harvest_control_rules.png') )
   include_graphics(c(fn1, fn2, fn3) )
 #  \@ref(fig:logistic-hcr)
 ```
-
   - N-ENS is in the "healthy" zone
   - S-ENS is in the "healthy" zone
   - 4X is in the "critical" zone
-
-
-<!-- 
- 
-\begin{footnotesize}
-*Table 6. Reference points from the logistic biomass dynamics fishery model (Model 1): K is Carrying capacity (kt); and r is Intrinsic rate of increase (non-dimensional). Note that FMSY (fishing mortality associated with 'Maximum Sustainable Yield') is r/2. Similarly, BMSY (biomass associated with 'Maximum Sustainable Yield') is K/2. SD is posterior Standard deviations.*
-\end{footnotesize}
-
-
-|       |  $K$ [SD] | $r$ [SD] |
-| :---: |    :----:   | :---: |
-| N-ENS | #r K_north` [#r K_north_sd`] | #r r_north` [#r r_north_sd`] |
-| S-ENS | #r K_south` [#r K_south_sd`] | #r r_south` [#r r_south_sd`] |
-| 4X    | #r K_4x`   [#r K_4x_sd`] | #r r_4x` [#r r_4x_sd`] |
-
-
---> 
-
- 
+  
  
 
 ## Conclusions
 
 The ESS ecosystem is still experiencing a lot of volatility and prudence is wise:
 
-- Rapid ecosystem change 
-- Rapid climatic change
-- Persist under extreme conditions if they are episodic
-- Shifts in spatial distribution towards cooler and deeper waters  
+- Rapid ecosystem change (groundfish collapse in 1980s and 1990s)
+- Climatic variability: very warm period from 2012-2023
+- Snow crab: 
+  - Can persist if extreme conditions are episodic by shifting spatial distributions    
+  - 4X was possibly too long and did not have the habitat space
+  - Climate variability can induce juxtaposition of warmer water species (prey and predators) with snow crab
+  
 
-Modelled solutions:
+## Conclusions: N-ENS
 
-- A few of many possible views
-- Over-emphasis of any one view and associated Reference Points is **not precautionary**. 
+- Viable habitat stable near historical mean and marginally improved relative to 2022.  
+- Female larval production peaked in 2017 and has since declined.
+- Recruitment continues at low levels, a noticible gap in recruitment to the fishery persists. 
+- Predation mortality (Cod, Halibut, Skate) is likely high and causing reduced recruitment to the fishery. 
+- Fishing mortality has been increasing since 2019. 
+- Fishable biomass continues a decreasing trend.
+- PA template suggest "healthy zone". 
+- A more careful harvest strategy would enable bridging this coming recruitment gap. 
+- A reduced TAC is prudent. 
 
 
-## Conclusions ...
+## Conclusions: S-ENS
 
-- In N-ENS, though recruitment continues at low levels, a gap in future recruitment to the fishery is expected for the next 1-3 years in N-ENS. N-ENS still exists in the healthy zone and so still has flexibility in approach. However, fishing mortality may have been higher than desirable. A more conservative harvest strategy would enable bridging this coming recruitment gap. A reduced TAC is prudent. 
+- Viable habitat marginally improved relative to a historic low in 2022.  
+- Female larval production peaked in 2023/2024.
+- Recruitment to the fishery from a strong year class has begun, full entry by 2025. 
+- Predation mortality (Halibut, Plaice, Sculpin, Skate) is likely high and causing reduced recruitment to the fishery. 
+- Fishing mortality has been increasing since 2019. 
+- Fishable biomass is at a historical low.
+- PA template suggest "healthy zone". 
+- Flexiblity in harvest strategy exists due to strong recuitment. 
+- A status quo TAC is prudent until confirmation of recruitment. 
 
-- In S-ENS, recruitment to the fishery is likely to continue at a moderate rate for the upcoming season. The S-ENS stock remains in the healthy zone. Exploitation rates derived from the fishery model have been declining in recent years. S-ENS has considerable flexibility in approach. All TAC directions are viable. 
 
-- In 4X, low to moderate levels of recruitment are expected for 2 years. 4X exists in the "cautious zone". The area is also in the southern-most extent of Snow Crab distribution in the North Atlantic and viable habitat has been depressed for many years. A reduced TAC is prudent. 
+
+## Conclusions: 4X
+
+- Viable habitat has been at historical lows since 2015.  
+- Female larval production peaked in 2022.
+- Recruitment to the fishery in the near-term is not evident. There is a pulse 4-5 years away. 
+- Predation mortality (Halibut) and competition with other Crustacea is likely high and causing reduced recruitment to the fishery. 
+- Fishing mortality has declined to negligible levels since a peak in 2019. 
+- Fishable biomass is at a historical low.
+- PA template suggest "critical zone". 
+- Stock status is extremely poor. 
+- Fishery closure until recovery is prudent. 
+
  
  
-
-
 ## References
 
 \begin{tiny}
@@ -1035,4 +1070,57 @@ Simpson, D., Rue, H., Riebler, A., Martins, T.G., and Sørbye, SH. 2017. Penalis
 \end{tiny}
 
 
-# End
+## End
+
+ 
+
+## Supplemental Information 
+  
+<!--  info removed to accomdate Kate's presentation in 2023 and fishery data --> 
+
+
+# Stock status  {.c}
+
+## Geometric mean density by size, sex and maturity
+   
+::: columns 
+:::: column 
+```{r sizefeq-male, out.width='80%', echo=FALSE, fig.align='center', fig.cap = 'Geometric mean density (no/km$^2$) by carapace width of immature (light) and mature (dark) male snow crab. The vertical line is legal size (95 mm).   '}
+include_graphics(  file.path( SCD, "assessments", year.assessment, "figures", "size.freq", "survey", "male.denl.png" )  )
+# \@ref(fig:sizefeq-male)
+``` 
+::::
+:::: column
+```{r sizefeq-female, out.width='80%', echo=FALSE, fig.align='center', fig.cap = 'Geometric mean density distribution (no/km$^2$) by carapace width of immature (light) and mature (dark).'}
+include_graphics(  file.path( SCD, "assessments", year.assessment, "figures", "size.freq", "survey", "female.denl.png" )  )
+# \@ref(fig:sizefeq-male)
+``` 
+::::
+:::
+ 
+
+
+## Mature female maps
+
+Distributions are heterogeneous and often in shallower areas.  
+
+```{r fmat-map, echo=FALSE, out.width='32%', fig.show='hold', fig.align='center', fig.cap= 'Mature female density log$_{10}$(no/km$^2$)  from the Snow Crab survey.' }
+loc = file.path( SCD, "output", "maps", "survey", "snowcrab", "annual", "totno.female.mat" )
+yrsplot = setdiff( year.assessment + c(0:-9), 2020)
+fn4 = file.path( loc, paste( "totno.female.mat", yrsplot[4], "png", sep=".") )
+fn3 = file.path( loc, paste( "totno.female.mat", yrsplot[3], "png", sep=".") )
+fn2 = file.path( loc, paste( "totno.female.mat", yrsplot[2], "png", sep=".") )
+fn1 = file.path( loc, paste( "totno.female.mat", yrsplot[1], "png", sep=".") )
+include_graphics( c( fn3, fn2, fn1) )
+# \@ref(fig:fmat-map)  
+```
+
+## Mature female timeseries
+
+```{r fmat-timeseries, out.width='50%', echo=FALSE, fig.align='center', fig.cap = 'Mature female density log$_{10}$(no/km$^2$) from the Snow Crab survey.'  }
+include_graphics( file.path( SCD, "assessments", year.assessment, "timeseries", "survey", "totno.female.mat.pdf") )
+# \@ref(fig:fmat-timeseries)
+```
+
+
+
