tidy up 2023 and add maturity plot

--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -200,7 +200,10 @@ Each variable is modelled with the same covariates.
   # some maps and plots
 
     for (vns in c( "number", "meansize", "habitat") ) {
- 
+      #vns ="number"
+      #vns ="meansize"
+      #vns ="habitat"
+  
       if ( vns=="number" ) {
         p=pN
         ylab = "Number"
@@ -295,6 +298,8 @@ Each variable is modelled with the same covariates.
        
       }
 
+      
+
       # plots with 95% PI
       oeffdir = file.path( outputdir, fn_root_prefix, "effects" )
       if ( !file.exists(oeffdir)) dir.create( oeffdir, recursive=TRUE, showWarnings=FALSE )
@@ -348,10 +353,59 @@ Each variable is modelled with the same covariates.
       #     xlab="Substrate grain size (mm)", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
       # dev.off()
 
- 
-    }
+
+      res = NULL; gc()
 
 
+      # posterior predictive check
+      #vns ="number"
+      #vns ="meansize"
+      #vns ="habitat"
+      
+      if ( vns=="number" ) {
+        MM = M[iq,]
+        iobs = which(MM$tag == "observations")
+        vn = "totno"
+        p = pN
+        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.numerical.densities" )
+      } 
+      if ( vns=="meansize" ) {
+        MM = M[iw,]
+        iobs = which(MM$tag == "observations")
+        vn = "meansize"
+        p = pW
+        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.meansize" )
+      }
+      if ( vns=="habitat") {
+        MM = M
+        iobs = which(MM$tag == "observations")
+        vn = "pa"
+        p = pH
+        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.presence_absence" )
+      }
+
+      fit = NULL; gc()
+      fit = carstm_model( p=p, DS="carstm_modelled_fit") #,  sppoly = sppoly )
+
+      pld = data.table(
+        observed =MM[iobs , vn] , 
+        fitted = fit$summary.fitted.values[["mean"]] [iobs]
+      )
+      anno1 = paste( "Pearson correlation: ", round( cor( pld$fitted, pld$observed, use="pairwise.complete.obs" ), 3))
+      # cor( fitted, observed, use="pairwise.complete.obs", "spearman" )
+
+      out = ggplot(pld, aes(x = jitter(observed), y = fitted )) +
+        geom_abline(slope=1, intercept=0, color="darkgray", lwd=1.4 ) +
+        geom_point(color="slategray") +
+        labs(caption=anno1, color="slateblue") +
+        theme( plot.caption = element_text(hjust = 0, size=12 ) )# move caption to the left 
+      fn = file.path(outputdir, "posterior_predictive_check.png" )
+      ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
+      print(out)    
+
+      fit  = MM = NULL; gc()
+
+}
 
 
 ```
