--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -82,6 +82,7 @@ There are two ways you can use this.
 
 ```julia
   year_assessment =2023
+  yrs = 1999:year_assessment
 
   rootdir = homedir()
   project_directory = joinpath( rootdir, "bio", "bio.snowcrab", "inst", "julia" ) 
@@ -101,9 +102,12 @@ There are two ways you can use this.
 
   o = load( joinpath( bio_data_directory, "biodyn_biomass.RData" ), convert=true)   # load data; alter file path as required   
 
-  include( joinpath(project_directory, "logistic_discrete.jl" ) )   # continue with script inside "bio.snowcrab/inst/julia/logistic_discrete.jl" for more control
+  # run the whole script or in parts inside "bio.snowcrab/inst/julia/logistic_discrete.jl" for more control
+  include( joinpath(project_directory, "logistic_discrete.jl" ) )   
 
 ```
+
+**OR,**
 
   2. Run within R and call Julia indirectly, using the JuliaCall R-library (install that too). 
 
